# UrbanReflex

./: .env  .env.example  .env.local.example  .gitignore  .justfile  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile.scheduler  HISTORY.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: README.md  app.py  dependencies.py
browser-extension/: INSTALLATION.md  README.md  manifest.json  popup.html
config/: README.md  __init__.py  config.py  data_model.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMANDS.md  DATA_COLLECTION_GUIDE.md  DATA_MODEL.md  DATA_MODEL_AND_ENTITIES.md  DEVELOPMENT_SETUP.md  ENV_SETUP.md  EXAMPLES_GUIDE.md  INFRASTRUCTURE_SETUP.md  NGSI_LD_GUIDE.md  RUNNING_NGSI_LD_PLATFORM.md  SCHEMAS_SUMMARY.md  USER_GUIDE.md  VALIDATION_AND_SEEDING_GUIDE.md
examples/: README.md  example_air_quality_observed.json  example_citizen_report.json  example_point_of_interest.json  example_road_segment.json  example_streetlight.json  example_weather_observed.json
open_data/: AirQualityObserved.geojson  AirQualityObserved.ndjson  CitizenReport.geojson  CitizenReport.ndjson  PointOfInterest.geojson  PointOfInterest.ndjson  README.md  RoadSegment.geojson  RoadSegment.ndjson  WeatherObserved.geojson  WeatherObserved.ndjson
schemas/: AirQualityObserved_schema.json  README.md
scripts/: README.md  download_schemas.py  export_open_data.py  fetch_aqi_openaq.py  fetch_osm_pois.py  fetch_osm_roads.py  fetch_weather_owm.py  generate_synthetic_streetlights.py  (+8 more)
(+363 files in other folders)
